--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body{
 }
 
 .menu__link{
-    display: inherit;
+    display: block;
     text-align: center;
     color: inherit;
     text-decoration: none;
