--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,17 @@
     --black: #242424;
     --orange: #F37B0D;
     --red: #DF2617;
+    --white: #F1EAEA;
+
+    --fs-xl: 5rem;
+    --fs-600: 1.5rem;
+    --fs-500: 1.25rem;
+    --fs-400: 1rem;
+
+    --ff-ahs: Arial, Helvetica, sans-serif;
+    --ff-uss: 'Urbanist', sans-serif;
+    --ff-rss: 'Roboto', sans-serif;
+    --ff-iss: 'Inter', sans-serif;
 }
 
 *{
@@ -12,10 +23,15 @@
 }
 
 body{
+    /* display: flex;
+    flex-flow: column wrap;
+    height: 100%; */
     margin: 0;
 }
 
 .header{
+    position: sticky;
+    top: 0;
     background-color: var(--black);
     color: #fff;
     overflow: hidden;
@@ -28,22 +44,31 @@ body{
 }
 
 .header-wrap h1{
-    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 20px;
+    font-family: var(--ff-ahs);
 }
 
 .menu-button{
     align-self: center;
     padding-right: 20px;
-    font-size: 1.5rem;
+    font-size: var(--fs-600);
 }
 
 .nav{
-    /* display: none; */
     flex-basis: 100%;
     line-height: 3;
-    font-family: 'Urbanist', sans-serif;
+    max-height: 0;
+    font-family: var(--ff-uss);
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: var(--fs-600);
+    transition: max-height 100ms ease-in-out;
+    border-bottom: thin solid #666;
+
+}
+
+.nav-show{
+    max-height: 1000px;
+    transition: max-height 500ms ease-in-out;
 }
 
 .menu{
@@ -53,7 +78,7 @@ body{
 }
 
 .menu__list{
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #ddd;
 }
 
 .menu__list:last-child{
@@ -67,6 +92,37 @@ body{
     text-decoration: none;
 }
 
-.menu__link:focus{
-    background-color: var(--red);
+.section-1{
+    color: #242424;
+    overflow: hidden;
+    background-color: var(--white);
+    padding-bottom: 70px;
+}
+
+.section-1 .title{
+    text-align: center;
+    font-family: var(--ff-ahs);
+    font-size: var(--fs-600);
+}   
+
+.img-container{
+    text-align: center;
+}
+
+.section-1 img{
+    width: 90%;
+    max-width: 720px;
+}
+
+.section-1 .text{
+    font-family: var(--ff-iss);
+    font-size: var(--fs-500)
+}
+
+.menu-button:active{
+    color: var(--blue);
+}
+
+.menu__list:hover{
+    background-color: var(--blue);
 }
