--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,8 @@
     --fs-500: 1.25rem;
     --fs-400: 1rem;
 
-    --ff-ahs: Arial, Helvetica, sans-serif;
-    --ff-uss: 'Urbanist', sans-serif;
-    --ff-rss: 'Roboto', sans-serif;
-    --ff-iss: 'Inter', sans-serif;
+    --ff-os-ss: 'Open Sans', sans-serif;
+    --ff-r-ss: 'Roboto', sans-serif;
 }
 
 *{
@@ -23,52 +21,49 @@
 }
 
 body{
-    /* display: flex;
-    flex-flow: column wrap;
-    height: 100%; */
     margin: 0;
 }
 
 .header{
-    position: sticky;
+    display: flex;
+    position: fixed;
+    width: 100%;
     top: 0;
+    height: 80px;
+    z-index: 999;
     background-color: var(--black);
     color: #fff;
-    overflow: hidden;
 }
 
-.header-wrap{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.header-wrap h1{
+.header h1{
     padding-left: 20px;
-    font-family: var(--ff-ahs);
+    font-family: var(--ff-os-ss);
 }
 
 .menu-button{
+    position: absolute;
     align-self: center;
-    padding-right: 20px;
+    padding-right: 15px;
+    right: 0;
     font-size: var(--fs-600);
 }
 
-.nav{
-    flex-basis: 100%;
-    line-height: 3;
-    max-height: 0;
-    font-family: var(--ff-uss);
-    font-weight: bold;
-    font-size: var(--fs-600);
-    transition: max-height 100ms ease-in-out;
-    border-bottom: thin solid #666;
 
+.nav{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: var(--black);
+    width: 100%;
+    line-height: 3;
+    transform: scale(1, 0);
+    transform-origin: top;
+    transition: transform 400ms ease-in-out;
 }
 
 .nav-show{
-    max-height: 1000px;
-    transition: max-height 500ms ease-in-out;
+    transform: scale(1, 1);
+    transition: transform 450ms ease-in-out;
 }
 
 .menu{
@@ -90,18 +85,32 @@ body{
     text-align: center;
     color: inherit;
     text-decoration: none;
+    font-family: var(--ff-r-ss);
+    font-weight: bold;
+    font-size: var(--fs-600);
+    opacity: 0;
+    transition: opacity 150ms ease-in-out ;
 }
 
-.section-1{
-    color: #242424;
-    overflow: hidden;
-    background-color: var(--white);
+.menu__link-show{
+    opacity: 1;
+    transition: opacity 250ms ease-in-out 250ms;
+}
+
+.sliders{
+    
+}
+
+.section-1, .section-2{
     padding-bottom: 70px;
+    border-bottom: thin solid var(--grey);
+    background-color: var(--white);
+    overflow: hidden;
 }
 
-.section-1 .title{
+.section-1 .title, .section-2 .title{
     text-align: center;
-    font-family: var(--ff-ahs);
+    font-family: var(--ff-os-ss);
     font-size: var(--fs-600);
 }   
 
@@ -110,13 +119,25 @@ body{
 }
 
 .section-1 img{
+    margin-top: 30px;
     width: 90%;
-    max-width: 720px;
+    max-width: 1080px;
 }
 
-.section-1 .text{
-    font-family: var(--ff-iss);
+.section-1 .text, .section-2 .text{
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family: var(--ff-r-ss);
     font-size: var(--fs-500)
+}
+
+.containerBtn{
+    padding-top: 30px;
+    padding-left: 15px;
+}
+
+.articleBtn{
+    text-decoration: none;
 }
 
 .menu-button:active{
