--- a/css/style.css
+++ b/css/style.css
@@ -97,18 +97,41 @@ body{
     transition: opacity 250ms ease-in-out 250ms;
 }
 
-.sliders{
-    
+.container{
+    margin-top: 80px;
 }
 
-.section-1, .section-2{
+.sliders{
+    height: 100vh;
+    background: linear-gradient(rgba(0 0 0 / .9), rgba(0 0 0 / .9)), url("../assets/b9KGv4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.sliders__item{
+    display: flex;
+    flex-direction: column;
+    color: var(--white);
+    font-family: var(--ff-r-ss);
+    font-size: var(--fs-500);
+    font-weight: bold;
+    justify-content: center;
+    height: 100%;
+}
+
+.active{
+    opacity: 1;
+}
+
+.sections{
     padding-bottom: 70px;
     border-bottom: thin solid var(--grey);
     background-color: var(--white);
     overflow: hidden;
 }
 
-.section-1 .title, .section-2 .title{
+.sections .title{
     text-align: center;
     font-family: var(--ff-os-ss);
     font-size: var(--fs-600);
@@ -119,12 +142,12 @@ body{
 }
 
 .section-1 img{
-    margin-top: 30px;
+    margin-top: 50px;
     width: 90%;
     max-width: 1080px;
 }
 
-.section-1 .text, .section-2 .text{
+.sections .text{
     padding-left: 15px;
     padding-right: 15px;
     font-family: var(--ff-r-ss);
