--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,15 @@
     --black: #242424;
     --orange: #F37B0D;
     --red: #DF2617;
-    --white: #F1EAEA;
+    --white: #FCFBF5;
 
     --fs-xl: 5rem;
     --fs-600: 1.5rem;
     --fs-500: 1.25rem;
     --fs-400: 1rem;
 
-    --ff-os-ss: 'Open Sans', sans-serif;
-    --ff-r-ss: 'Roboto', sans-serif;
+    --ff-ss: sans-serif;
+    /* --ff-r-ss: 'Roboto', sans-serif; */
 }
 
 *{
@@ -22,6 +22,7 @@
 
 body{
     margin: 0;
+    font-family: sans-serif;
 }
 
 .header{
@@ -35,7 +36,7 @@ body{
     color: #fff;
 }
 
-.header h1{
+/* .header h1{
     padding-left: 20px;
     font-family: var(--ff-os-ss);
 }
@@ -95,7 +96,7 @@ body{
 .menu__link-show{
     opacity: 1;
     transition: opacity 250ms ease-in-out 250ms;
-}
+} */
 
 .sliders{
     
