--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 :root{
-    --gold: #FFC300;
-    --blue: #0C85F1;
-    --grey: #384856;
-    --black: #242424;
-    --orange: #F37B0D;
-    --red: #DF2617;
+    --orange: #DBB076;
     --white: #FCFBF5;
+    --purple: #9B6BDB;
+    --blue: #606FDB;
 
     --fs-xl: 5rem;
     --fs-600: 1.5rem;
@@ -13,7 +10,6 @@
     --fs-400: 1rem;
 
     --ff-ss: sans-serif;
-    /* --ff-r-ss: 'Roboto', sans-serif; */
 }
 
 *{
@@ -26,26 +22,32 @@ body{
 }
 
 .header{
-    display: flex;
     position: fixed;
-    width: 100%;
     top: 0;
-    height: 80px;
     z-index: 999;
-    background-color: var(--black);
-    color: #fff;
+    width: 100%;
+    height: 80px;
+    background-color: var(--blue);
+    color: var(--white);
 }
 
-/* .header h1{
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1024px;
+}
+
+.header__title{
     padding-left: 20px;
     font-family: var(--ff-os-ss);
 }
 
 .menu-button{
-    position: absolute;
-    align-self: center;
+    height: 100%;
     padding-right: 15px;
-    right: 0;
     font-size: var(--fs-600);
 }
 
@@ -54,7 +56,7 @@ body{
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: var(--black);
+    background-color: var(--blue);
     width: 100%;
     line-height: 3;
     transform: scale(1, 0);
@@ -74,7 +76,11 @@ body{
 }
 
 .menu__list{
-    border-bottom: 1px solid #ddd;
+    border-bottom: thin solid var(--white);
+}
+
+.menu__list:first-child{
+    border-top: thin solid var(--white);
 }
 
 .menu__list:last-child{
@@ -96,10 +102,15 @@ body{
 .menu__link-show{
     opacity: 1;
     transition: opacity 250ms ease-in-out 250ms;
-} */
+}
 
 .sliders{
     
+}
+
+.main{
+    position: relative;
+    top: 80px;
 }
 
 .section-1, .section-2{
@@ -146,5 +157,6 @@ body{
 }
 
 .menu__list:hover{
-    background-color: var(--blue);
+    color: var(--blue);
+    background-color: var(--white);
 }
