--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,21 @@
 :root{
     --orange: #DBB076;
     --white: #FCFBF5;
-    --purple: #9B6BDB;
-    --blue: #606FDB;
+    --purple: #511378;
+    --dark-purple: #371777;
+    --light-yellow: #E6C16E;
+    --black: #333;
+    --red: #cc2624;
 
-    --fs-xl: 5rem;
+    --fs-800: 2rem;
+    --fs-700: 1.75rem;
     --fs-600: 1.5rem;
     --fs-500: 1.25rem;
     --fs-400: 1rem;
+}
 
-    --ff-ss: sans-serif;
+html{
+    scroll-behavior: smooth;
 }
 
 *{
@@ -26,8 +32,8 @@ body{
     top: 0;
     z-index: 999;
     width: 100%;
-    height: 80px;
-    background-color: var(--blue);
+    height: 5rem;
+    background-color: var(--dark-purple);
     color: var(--white);
 }
 
@@ -41,12 +47,11 @@ body{
 }
 
 .header__title{
+    font-size: var(--fs-800);
     padding-left: 30px;
-    font-family: var(--ff-ss);
 }
 
 .menu-button{
-
     height: 100%;
     padding-right: 30px;
     font-size: var(--fs-600);
@@ -57,7 +62,7 @@ body{
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: var(--blue);
+    background-color: var(--dark-purple);
     width: 100%;
     line-height: 3;
     transform: scale(1, 0);
@@ -93,8 +98,6 @@ body{
     text-align: center;
     color: inherit;
     text-decoration: none;
-    font-family: var(--ff-r-ss);
-    font-weight: bold;
     font-size: var(--fs-600);
     opacity: 0;
     transition: opacity 150ms ease-in-out ;
@@ -105,59 +108,131 @@ body{
     transition: opacity 250ms ease-in-out 250ms;
 }
 
-.sliders{
+.sections{
+    padding-top: 5rem;
+}
+
+.section-1{
+    border-bottom: thin solid var(--grey);
+    font-weight: 400;
+    color: var(--white);
+    overflow: hidden;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), no-repeat center/cover url("../assets/campaign-creators-iEiUITs149M-unsplash.jpg");
+}
+
+.section-1::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4rem;
+    background-color: var(--dark-purple);
+}
+
+.article-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.title{
+    text-align: center;
+    font-size: var(--fs-800);
+}   
+
+.text{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    font-size: var(--fs-600);
+}
+
+.btn{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: .6em 1em;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: var(--fs-800);
+    font-weight: 700;
+    text-decoration: none;
+    color: var(--white);
+    cursor: pointer;
+    background-color: var(--purple);
+}
+
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.cards-container__items{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 280px;
+    max-width: 280px;
+    margin: 6em 6.7em;
+    border-radius: 1em;
+    /* border: thin solid rgb(138, 136, 136); */
+    box-shadow: 1px 0 6px #000;
+    font-family: 'Segoe UI', 'Segoe UI', 'Segoe UI', 'Seg';
+    font-size: 1rem;
+}
+
+.card-img{
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    width: 100%;
+}
+
+.card-title{
+    font-family: inherit;
+    font-size: var(--fs-600);
+    font-weight: 500;
+}
+
+.card-text{
+    font-family: inherit;
+    font-size: var(--fs-500);
+    font-weight: 400;
     
 }
 
-.main{
-    position: relative;
-    top: 80px;
-}
-
-.section-1, .section-2{
-    padding-bottom: 70px;
-    border-bottom: thin solid var(--grey);
-    background-color: var(--white);
-    overflow: hidden;
-}
-
-.section-1 .title, .section-2 .title{
+.card-button{
+    display: block;
+    padding: 2rem 0;
+    width: 100%;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
     text-align: center;
-    font-family: var(--ff-os-ss);
-    font-size: var(--fs-600);
-}   
-
-.img-container{
-    text-align: center;
-}
-
-.section-1 img{
-    margin-top: 30px;
-    width: 90%;
-    max-width: 1080px;
-}
-
-.section-1 .text, .section-2 .text{
-    padding-left: 15px;
-    padding-right: 15px;
-    font-family: var(--ff-r-ss);
-    font-size: var(--fs-500)
-}
-
-.containerBtn{
-    padding-top: 30px;
-    padding-left: 15px;
-}
-
-.articleBtn{
     text-decoration: none;
+    font-family: inherit;
+    font-size: var(--fs-700);
+    color: var(--white);
+    background-color: var(--red);
+}
+
+.btn:active{
+    color: var(--black);
+    background-color: var(--white)
 }
 
 .menu-button:active{
-    color: var(--blue);
+    color: var(--black);
 }
 
 .menu__list:hover{
-    color: var(--blue);
+    color: var(--dark-purple);
     background-color: var(--white);
 }
+
