--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --dark-purple: #371777;
     --light-yellow: #E6C16E;
     --black: #333;
-    --red: #cc2624;
+    --pink: #ff05de;
 
     --fs-800: 2rem;
     --fs-700: 1.75rem;
@@ -23,8 +23,11 @@ html{
 }
 
 body{
+    position:relative;
+    height: 100%;
     margin: 0;
     font-family: sans-serif;
+    padding-bottom: 10rem;
 }
 
 .header{
@@ -81,22 +84,11 @@ body{
     list-style: none;
 }
 
-.menu__list{
-    border-bottom: thin solid var(--white);
-}
-
-.menu__list:first-child{
-    border-top: thin solid var(--white);
-}
-
-.menu__list:last-child{
-    border-bottom: none;
-}
-
 .menu__link{
     display: block;
     text-align: center;
     color: inherit;
+    border-top: thin solid var(--white);
     text-decoration: none;
     font-size: var(--fs-600);
     opacity: 0;
@@ -112,7 +104,7 @@ body{
     padding-top: 5rem;
 }
 
-.section-1{
+.section-presentation{
     border-bottom: thin solid var(--grey);
     font-weight: 400;
     color: var(--white);
@@ -120,7 +112,7 @@ body{
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), no-repeat center/cover url("../assets/campaign-creators-iEiUITs149M-unsplash.jpg");
 }
 
-.section-1::after{
+.section-presentation::after{
     content: "";
     display: block;
     width: 100%;
@@ -128,7 +120,7 @@ body{
     background-color: var(--dark-purple);
 }
 
-.article-1{
+.article-presentation{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,23 +159,27 @@ body{
     background-color: var(--purple);
 }
 
+.section-cards{
+    text-align: center;
+}
+
+.section-cards__title{
+    font-size: var(--fs-700);
+}
+
 .cards-container{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 240px);
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    gap: 5em;
+    padding: 0 15vw 15vh;
 }
 
 .cards-container__items{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 20%;
-    min-width: 280px;
-    max-width: 280px;
-    margin: 6em 10%;
     border-radius: 1em;
+    box-shadow: .1rem 0 .5em rgba(0, 0, 0, 0.5);
     font-family: 'Segoe UI', 'Segoe UI', 'Segoe UI', 'Seg';
     font-size: 1rem;
 }
@@ -192,12 +188,6 @@ body{
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     width: 100%;
-}
-
-.card-text-container{
-    text-align: center;
-    width: 100%;
-    box-shadow: .1rem 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .card-title{
@@ -210,11 +200,10 @@ body{
     font-family: inherit;
     font-size: var(--fs-500);
     font-weight: 400;
-    
 }
 
 .card-button{
-    padding: 2rem 0;
+    padding: 1.5rem 0;
     width: 100%;
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
@@ -223,7 +212,55 @@ body{
     font-family: inherit;
     font-size: var(--fs-700);
     color: var(--white);
-    background-color: var(--red);
+}
+
+.html{
+    background-color: #f06529;
+}
+
+.css{
+    background-color: #2965f1;   
+}
+
+.js{
+    background-color: #f0db4f;
+    color: #323330;
+}
+
+.react{
+    background-color: #00d8ff;
+}
+
+.sass{
+    background-color: #cc6699;
+}
+
+.node{
+    background-color: #6cc24a;
+}
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    align-items: center;
+    width: 100%; 
+    background: var(--dark-purple);
+    /* min-height: 100vh;    */
+}
+
+.contact-form-container{
+    text-align: center;
+}
+
+.contact-form-input{
+    display: block;
+}
+
+.footer-copyright{
+    font-size: var(--fs-400);
+    font-weight: 700;
+    color: var(--white);
+    text-align: center;
 }
 
 .btn:active{
@@ -232,7 +269,7 @@ body{
 }
 
 .menu-button:active{
-    color: var(--black);
+    color: var(--pink);
 }
 
 .menu__list:hover{
@@ -240,3 +277,31 @@ body{
     background-color: var(--white);
 }
 
+@media screen and (min-width: 1024px){
+    :root{
+        --fs-800: 2.5rem;
+        --fs-700: 2.25rem;
+        --fs-600: 2rem;
+        --fs-500: 1.5rem;
+        --fs-400: 1.25rem;
+    }
+
+    .menu-button{
+        display: none;
+    }
+
+    .menu, .nav, .menu__list, .menu__link{
+        all: unset;
+    }
+
+    .menu__list{
+        padding: 0 2rem;
+        font-size: var(--fs-400);
+        cursor: pointer;
+    }
+
+    .menu__list:hover{
+        background-color: transparent;
+        color: var(--pink);
+    }
+}
